// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-DwwCV eAwwec"
>
  <input
    checked={true}
    className="sc-fVmPpc guirgK"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bsCzJh kwyAOB"
  >
    <span
      className="sc-kKoOxK gANAhk"
    >
      <div
        checked={true}
        className="sc-fsyvLD hEbFRi"
      />
    </span>
    <p
      className="sc-khrHlC dXZelV"
      color="bulma.100"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-DwwCV eAwwec"
>
  <input
    className="sc-fVmPpc guirgK"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bsCzJh kwyAOB"
  >
    <span
      className="sc-kKoOxK gANAhk"
    >
      <div
        checked={false}
        className="sc-fsyvLD bjRLpz"
      />
    </span>
    <p
      className="sc-khrHlC dXZelV"
      color="bulma.100"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-DwwCV eAwwec"
>
  <input
    className="sc-fVmPpc guirgK"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bsCzJh kwyAOB"
  >
    <span
      className="sc-kKoOxK gANAhk"
    >
      <div
        checked={false}
        className="sc-fsyvLD bjRLpz"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-DwwCV eAwwec"
>
  <input
    className="sc-fVmPpc guirgK"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-bsCzJh kwyAOB"
  >
    <span
      className="sc-kKoOxK gANAhk"
    >
      <div
        checked={false}
        className="sc-fsyvLD bjRLpz"
      />
    </span>
    <p
      className="sc-khrHlC dXZelV"
      color="bulma.100"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-DwwCV eAwwec"
>
  <input
    className="sc-fVmPpc guirgK"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bsCzJh kwyAOB"
  >
    <span
      className="sc-kKoOxK gANAhk"
    >
      <div
        checked={false}
        className="sc-fsyvLD bjRLpz"
      />
    </span>
    <p
      className="sc-khrHlC dXZelV"
      color="bulma.100"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
